--- a/.htaccess
+++ b/.htaccess
@@ -537,6 +537,6 @@ php_flag register_globals Off
 
 #Rewrite everything to the cannonical url
 <IfModule mod_rewrite.c>
-#	RewriteCond %{HTTP_HOST} !^your\.url\.com
-#	RewriteRule ^(.*)$ http://cannonical-url.com/$1 [R=301,L]
+	RewriteCond %{HTTP_HOST} !^mixerlescultures\.fr
+	RewriteRule ^(.*)$ http://mixerlescultures.fr/$1 [R=301,L]
 </IfModule>
